--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ dask==0.14.3
 datashape==0.5.4
 decorator==4.0.11
 distributed==1.16.3
+dj-database-url==0.5.0
 Django==1.11.3
 docutils==0.14
 entrypoints==0.2.2
@@ -116,6 +117,7 @@ pyOpenSSL==17.0.0
 pyparsing==2.1.4
 pytest==3.0.7
 python-dateutil==2.6.1
+python-decouple==3.1
 pytz==2017.2
 PyWavelets==0.5.2
 PyYAML==3.12
